-- Internal staff profiles provisioned from Clerk. One row per Clerk account (clerk_user_id = token sub).
CREATE TABLE users (
    id            BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    clerk_user_id VARCHAR(255) NOT NULL UNIQUE,
    email         VARCHAR(320),
    full_name     VARCHAR(255),
    avatar_url    VARCHAR(1024),
    status        VARCHAR(20)  NOT NULL DEFAULT 'ACTIVE',
    created_at    TIMESTAMPTZ  NOT NULL,
    updated_at    TIMESTAMPTZ  NOT NULL
);

COMMENT ON TABLE users IS 'Staff accounts provisioned from Clerk; no roles, no passwords.';
